sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:4: error: value blue is not a member of java.awt.Color
  var color:Color = color.blue
                          ^DutchFlagAlgo:6: error: type mismatch;
 found   : Int
 required: java.awt.Color
    color=getColor(j)
                  ^DutchFlagAlgo:7: error: value blue is not a member of java.awt.Color
    if(color==color.blue){
                    ^